--- a/src/style.css
+++ b/src/style.css
@@ -16,4 +16,6 @@ div.react-timeline-event {
     font-family: sans-serif;
     color: white;
     user-select: none;
+    width: 100%;
+    height: 100%;
 }
