--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,25 @@
+*, *:focus, *:hover {
+    outline: none;
+}
+
 .react-timeline-svg {
     position: relative;
     height: 100%;
     width: 100%;
     display: block;
-    touch-action: none;
+    touch-action: pan-y;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently
+                                     supported by Chrome, Edge, Opera and Firefox */
+}
+
+.allow-scroll {
+    touch-action: pan-x pan-y;
 }
 
 .react-timeline {
