--- a/src/components/canvas/canvas.css
+++ b/src/components/canvas/canvas.css
@@ -1,9 +1,3 @@
-:root {
-    --time-offset: 0px;
-    --time-zero-update: 0;
-    --time-scaling: 1;
-}
-
 .canvas {
     user-select: none;
     touch-action: none;
@@ -11,25 +5,8 @@
     overscroll-behavior-x: contain;
 }
 
-.timely {
-    transform: scaleX(var(--time-scaling)) translateX(var(--time-offset));
-    transform-origin: var(--time-offset) 0;
-    transform-box: view-box;
-    will-change: transform;
-}
-
-.timely-dont-scale {
-    transform: scaleX(calc(1 / var(--time-scaling))) translate3d(0, 0, 0);
-    transform-origin: center;
-    transform-box: fill-box;
-    will-change: transform;
-}
-
 .non-scaling-stroke {
     vector-effect: non-scaling-stroke;
-}
-
-.easing {
 }
 
 .drag-target {
@@ -46,4 +23,12 @@
     visibility: visible;
     opacity: 1;
     transition: visibility 2s;
+}
+
+.canvas text {
+    text-rendering: optimizeSpeed;
+}
+
+.canvas {
+    shape-rendering: optimizeSpeed;
 }
