--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,12 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono&family=Fredoka&family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400;500&family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;500&family=Noto+Sans&family=Overpass+Mono:wght@400;500&family=Roboto:wght@300;400;500&family=Ubuntu+Mono&display=swap');
-
-.header {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 0.9em;
+:root {
+    --content: ""
 }
 
-.header-background {
-    fill: none;
-    stroke: none;
+.header {
+    position: absolute;
+    touch-action: none;
+    text-align: center;
+    color: #444444;
+    font-family: sans-serif;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 14px;
+    box-sizing: border-box;
+    white-space: nowrap;
+    height: 20px
+}
+
+.header::after {
+    content: var(--content);
+    vertical-align: middle;
 }
